docs/v0.2.0a168/_sources/reference/_autosummary/hpcflow.sdk.submission.shells.bash.Bash.rst.txt
hpcflow.sdk.submission.shells.bash.Bash
=======================================

.. currentmodule:: hpcflow.sdk.submission.shells.bash

.. autoclass:: Bash
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Bash.format_loop_check
      ~Bash.format_save_parameter
      ~Bash.format_stream_assignment
      ~Bash.get_direct_submit_command
      ~Bash.get_version_info
      ~Bash.get_wait_command
      ~Bash.prepare_JS_path
      ~Bash.prepare_element_run_dirs
      ~Bash.process_JS_header_args
      ~Bash.process_app_invoc_executable
      ~Bash.wrap_in_subshell
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Bash.DEFAULT_EXE
      ~Bash.JS_DIRECT_HEADER
      ~Bash.JS_ELEMENT_ARRAY
      ~Bash.JS_ELEMENT_LOOP
      ~Bash.JS_ENV_SETUP_INDENT
      ~Bash.JS_EXT
      ~Bash.JS_HEADER
      ~Bash.JS_INDENT
      ~Bash.JS_MAIN
      ~Bash.JS_SCHEDULER_HEADER
      ~Bash.JS_SHEBANG
      ~Bash.executable
      ~Bash.linux_release_file
      ~Bash.shebang_executable
   
   