docs/v0.2.0a202/_sources/reference/_autosummary/hpcflow.sdk.submission.shells.bash.Bash.rst.txt
hpcflow.sdk.submission.shells.bash.Bash
=======================================

.. currentmodule:: hpcflow.sdk.submission.shells.bash

.. autoclass:: Bash
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:   

   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~Bash.format_array
      ~Bash.format_array_get_item
      ~Bash.format_commands_file
      ~Bash.format_env_var_get
      ~Bash.format_save_parameter
      ~Bash.format_source_functions_file
      ~Bash.format_stream_assignment
      ~Bash.get_command_file_launch_command
      ~Bash.get_direct_submit_command
      ~Bash.get_version_info
      ~Bash.get_wait_command
      ~Bash.prepare_JS_path
      ~Bash.prepare_element_run_dirs
      ~Bash.process_JS_header_args
      ~Bash.process_app_invoc_executable
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~Bash.os_args
      ~Bash.DEFAULT_EXE
      ~Bash.JS_ACT_MULTI
      ~Bash.JS_ACT_SINGLE
      ~Bash.JS_BLOCK_HEADER
      ~Bash.JS_BLOCK_LOOP
      ~Bash.JS_DIRECT_HEADER
      ~Bash.JS_ELEMENT_MULTI_ARRAY
      ~Bash.JS_ELEMENT_MULTI_LOOP
      ~Bash.JS_ELEMENT_SINGLE
      ~Bash.JS_ENV_SETUP_INDENT
      ~Bash.JS_EXT
      ~Bash.JS_FOOTER
      ~Bash.JS_FUNCS
      ~Bash.JS_HEADER
      ~Bash.JS_INDENT
      ~Bash.JS_MAIN
      ~Bash.JS_RUN
      ~Bash.JS_RUN_CMD
      ~Bash.JS_RUN_CMD_COMBINED
      ~Bash.JS_RUN_LOG_PATH_DISABLE
      ~Bash.JS_RUN_LOG_PATH_ENABLE
      ~Bash.JS_SCHEDULER_HEADER
      ~Bash.JS_SHEBANG
      ~Bash.executable
      ~Bash.linux_release_file
      ~Bash.shebang_executable
   
   